Gap Fix

--- a/beginning/part2/css/styles.css
+++ b/beginning/part2/css/styles.css
@@ -77,7 +77,7 @@ footer img {
     display: grid ;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
-    gap: 1em;
+    gap: 1.5em;
     width: 1000px;
 }
 
